<?xml version="1.0"?>
<package>
  <name>dwm3000_ros</name>
  <version>0.0.2</version>
  <description>DWM3000 ROS</description>
  <maintainer email="hellston20a@gmail.com">Hs293Go</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dwm3000_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dwm3000_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

