<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dwm3000_ros</name>
  <version>0.0.2</version>
  <description>DWM3000 ROS</description>
  <maintainer email="hellston20a@gmail.com">Hs293Go</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>fsc_serial</depend>
  <depend>nanopb</depend>
  <depend>dwm3000_msgs</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
